@@ -7,6 +7,8 @@
 
   * Fixed PARAGRAPH command.
 
+  * DeleteNextWord now deletes through the end of the next N words.
+
   * Undoing DeleteNextWord/DeletePrevWord also restores cursor position.
 
 3.1.1 2017-06-04
